fix for links which are not showing properly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-.alone-css, .alone-css:hover, .navbar, a {
+.alone-css, .alone-css:hover, .navbar a {
     color: white;
 }
 
